--- a/test/index.html
+++ b/test/index.html
@@ -2,189 +2,324 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Dating App – Firebase Demo</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<!-- Firebase -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>WhatsApp Style Chat – Group & Private</title>
 
 <style>
-body{margin:0;font-family:Arial;background:#f4f6fb}
-.hidden{display:none}
+:root{
+  --bg:#111b21;
+  --panel:#202c33;
+  --accent:#25d366;
+  --muted:#97a4ab;
+}
+*{box-sizing:border-box}
+body{
+  margin:0;
+  background:var(--bg);
+  color:#e9edef;
+  font-family:Arial,system-ui;
+  height:100vh;
+}
+#app{height:100vh;display:flex;flex-direction:column}
 
-/* Header */
-header{background:#ff4d6d;color:#fff;padding:12px;display:flex;justify-content:space-between;align-items:center}
-.bell{position:relative;font-size:22px;cursor:pointer}
-.badge{position:absolute;top:-6px;right:-8px;background:red;color:#fff;border-radius:50%;padding:2px 6px;font-size:11px}
+/* TOP BAR */
+#topBar{
+  background:#0b141a;
+  padding:8px 12px;
+  display:flex;
+  align-items:center;
+  gap:10px;
+}
+#title{font-weight:700}
+#notifWrap{display:flex;align-items:center;gap:8px}
+.bell{
+  width:38px;height:38px;
+  border-radius:10px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  cursor:pointer;
+  position:relative;
+  background:#202c33;
+}
+.badge{
+  position:absolute;
+  top:-6px;right:-6px;
+  background:#ff3b30;
+  color:#fff;
+  font-size:12px;
+  min-width:18px;
+  height:18px;
+  padding:0 6px;
+  border-radius:12px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
 
-/* Login */
-.login{max-width:400px;margin:40px auto;background:#fff;padding:20px;border-radius:12px}
-.login input,.login select{width:100%;padding:10px;margin:6px 0}
-.login button{width:100%;padding:12px;background:#ff4d6d;color:#fff;border:none;border-radius:8px}
+/* SETTINGS */
+#settingsWrap{position:relative}
+#settingsPanel{
+  position:absolute;
+  right:0;
+  top:42px;
+  background:#0b141a;
+  border-radius:10px;
+  padding:10px;
+  width:220px;
+  display:none;
+  z-index:50;
+}
+.settingRow{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:6px 0;
+  font-size:14px;
+}
+.toggle{
+  width:44px;height:24px;
+  background:#2a3942;
+  border-radius:12px;
+  position:relative;
+  cursor:pointer;
+}
+.toggle span{
+  width:18px;height:18px;
+  background:#fff;
+  border-radius:50%;
+  position:absolute;
+  top:3px;left:3px;
+  transition:.2s;
+}
+.toggle.on{background:var(--accent)}
+.toggle.on span{left:23px}
 
-/* Card */
-.card{background:#fff;border-radius:15px;overflow:hidden;max-width:350px;margin:20px auto}
-.card img{width:100%;height:320px;object-fit:cover}
-.card-body{padding:12px}
+/* CHAT */
+#messages{
+  flex:1;
+  overflow:auto;
+  padding:12px;
+  background:#071215;
+}
+.msg{
+  max-width:75%;
+  margin-bottom:8px;
+  padding:8px 12px;
+  border-radius:10px;
+  background:var(--panel);
+}
+.self{margin-left:auto;background:#005c4b}
+.name{font-size:12px;color:#53bdeb}
+.time{font-size:11px;color:var(--muted);text-align:right}
 
-/* Popup */
-.popup{position:fixed;top:60px;right:10px;width:260px;background:#fff;border-radius:10px;box-shadow:0 4px 12px rgba(0,0,0,.2)}
-.popup div{padding:10px;border-bottom:1px solid #eee;cursor:pointer}
+/* INPUT */
+#inputBar{
+  display:flex;
+  gap:8px;
+  padding:10px;
+  background:var(--panel);
+}
+#messageInput{
+  flex:1;
+  border:0;
+  outline:0;
+  padding:10px;
+  border-radius:20px;
+  background:#2a3942;
+  color:#fff;
+}
+#sendBtn{
+  width:44px;height:44px;
+  border-radius:50%;
+  border:0;
+  background:var(--accent);
+  color:#000;
+  font-size:18px;
+  cursor:pointer;
+}
 
-/* Chat */
-.chat-box{position:fixed;bottom:0;right:10px;width:300px;background:#fff;border-radius:12px 12px 0 0}
-.chat-header{background:#ff4d6d;color:#fff;padding:10px;display:flex;justify-content:space-between}
-.chat-messages{height:200px;overflow:auto;padding:10px}
-.chat-input{display:flex}
-.chat-input input{flex:1;padding:8px}
-.chat-input button{padding:8px;background:#4caf50;color:#fff;border:none}
+/* PRIVATE PANEL */
+#panel{
+  position:fixed;
+  right:-320px;
+  top:0;
+  width:320px;
+  height:100vh;
+  background:#081214;
+  transition:.3s;
+  z-index:100;
+  display:flex;
+  flex-direction:column;
+}
+#panel.open{right:0}
+.panelHeader{
+  padding:12px;
+  border-bottom:1px solid #1f2c33;
+  font-weight:700;
+}
+.panelList{flex:1;overflow:auto}
+.panelItem{
+  padding:10px;
+  cursor:pointer;
+  display:flex;
+  justify-content:space-between;
+}
+.panelItem:hover{background:#202c33}
 
-.block{background:#000;color:#fff;border:none;padding:5px 8px;font-size:12px}
+/* LOGIN */
+#loginWrap{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.7);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  z-index:200;
+}
+#loginCard{
+  background:#0b141a;
+  padding:20px;
+  border-radius:12px;
+  width:280px;
+}
+#loginCard input{
+  width:100%;
+  padding:10px;
+  border-radius:10px;
+  border:0;
+  margin-top:8px;
+  background:#162027;
+  color:#fff;
+}
+#loginCard button{
+  margin-top:10px;
+  width:100%;
+  padding:10px;
+  border:0;
+  border-radius:10px;
+  background:var(--accent);
+  cursor:pointer;
+}
 </style>
 </head>
 
 <body>
 
-<header class="hidden" id="topBar">
-<span>❤️ Dating App</span>
-<div class="bell" onclick="toggleNotify()">
-🔔 <span class="badge hidden" id="notifyCount">0</span>
-</div>
-</header>
-
-<!-- Notifications -->
-<div class="popup hidden" id="notifyBox"></div>
-
-<!-- Login -->
-<div class="login" id="loginBox">
-<h3>Login</h3>
-<input id="name" placeholder="Name">
-<input id="age" type="number" placeholder="Age">
-<select id="gender">
-<option value="">Gender</option>
-<option>Male</option>
-<option>Female</option>
-</select>
-<input type="file" id="photo">
-<button onclick="login()">Enter</button>
+<!-- PRIVATE CHAT LIST PANEL -->
+<div id="panel">
+  <div class="panelHeader">Private Chats</div>
+  <div class="panelList" id="panelList"></div>
 </div>
 
-<!-- App -->
-<div class="hidden" id="app">
-<div class="card">
-<img id="profileImg">
-<div class="card-body">
-<h3 id="profileName"></h3>
-<button onclick="openChat()">💬 Chat</button>
-</div>
-</div>
+<div id="app">
+
+  <!-- TOP BAR -->
+  <div id="topBar">
+    <div id="title">Group Chat</div>
+    <div style="flex:1"></div>
+
+    <div id="notifWrap">
+      <!-- PRIVATE CHAT ICON -->
+      <div class="bell" id="privateBtn">💬
+        <div class="badge" id="privateBadge" style="display:none">0</div>
+      </div>
+
+      <!-- SETTINGS -->
+      <div id="settingsWrap">
+        <div class="bell" id="settingsBtn">⚙️</div>
+        <div id="settingsPanel">
+          <div class="settingRow">
+            Audio Call
+            <div class="toggle on" id="audioToggle"><span></span></div>
+          </div>
+          <div class="settingRow">
+            Private Chat
+            <div class="toggle on" id="privateToggle"><span></span></div>
+          </div>
+          <div class="settingRow">
+            Profile Image
+            <input type="file" id="profileImg" accept="image/*">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- CHAT -->
+  <div id="messages"></div>
+
+  <div id="inputBar">
+    <input id="messageInput" placeholder="Type message">
+    <button id="sendBtn">➤</button>
+  </div>
 </div>
 
-<!-- Chat -->
-<div class="chat-box hidden" id="chatBox">
-<div class="chat-header">
-<span id="chatWith"></span>
-<button class="block" onclick="toggleBlock()">Block</button>
+<!-- LOGIN -->
+<div id="loginWrap">
+  <div id="loginCard">
+    <b>Enter your name</b>
+    <input id="nameInput" placeholder="Your name">
+    <button id="joinBtn">Join</button>
+  </div>
 </div>
-<div class="chat-messages" id="messages"></div>
-<div class="chat-input">
-<input id="msg">
-<button onclick="sendMsg()">Send</button>
-</div>
-</div>
+
+<!-- FIREBASE -->
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
 <script>
-/* Firebase */
+/* FIREBASE CONFIG */
 firebase.initializeApp({
-apiKey: "AIzaSyAlWP5D79PsX29H0hIZlfvL0YV5Us7v5I4",
-authDomain: "sample-firebase-ai-app-1f408.firebaseapp.com",
-databaseURL: "https://sample-firebase-ai-app-1f408-default-rtdb.asia-southeast1.firebasedatabase.app"
+  apiKey: "AIzaSyB1VbLbqBxCiG_bfGoQgQyapXwHUQ-Q7BU",
+  authDomain: "tamil-chat-2d54e.firebaseapp.com",
+  databaseURL: "https://tamil-chat-2d54e-default-rtdb.firebaseio.com",
+  projectId: "tamil-chat-2d54e",
+  storageBucket: "tamil-chat-2d54e.appspot.com",
+  messagingSenderId: "804705969240",
+  appId: "1:804705969240:web:658df281dd8360843"
 });
-const db=firebase.database();
+const db = firebase.database();
 
-/* Demo profiles */
-const profiles=[
-{id:"p1",name:"Priya",age:26,img:"https://images.unsplash.com/photo-1494790108377-be9c29b29330"},
-{id:"p2",name:"Anu",age:24,img:"https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e"}
-];
-let currentProfile=profiles[0];
-let me=null, unread=0;
+/* BASIC CHAT */
+let username="";
+const messages=document.getElementById("messages");
 
-/* Auto login */
-if(localStorage.user){
-me=JSON.parse(localStorage.user);
-startApp();
-}
-
-/* Login */
-function login(){
-const file=document.getElementById('photo').files[0];
-const reader=new FileReader();
-reader.onload=()=>{
-me={id:Date.now(),name:name.value,age:age.value,gender:gender.value,photo:reader.result};
-localStorage.user=JSON.stringify(me);
-db.ref("users/"+me.id).set(me);
-startApp();
+document.getElementById("joinBtn").onclick=()=>{
+  username=document.getElementById("nameInput").value.trim();
+  if(!username)return;
+  document.getElementById("loginWrap").style.display="none";
 };
-reader.readAsDataURL(file);
+
+document.getElementById("sendBtn").onclick=send;
+function send(){
+  const text=messageInput.value.trim();
+  if(!text)return;
+  db.ref("messages").push({name:username,text,time:Date.now()});
+  messageInput.value="";
 }
 
-function startApp(){
-loginBox.classList.add('hidden');
-app.classList.remove('hidden');
-topBar.classList.remove('hidden');
-loadProfile();
-listenMessages();
-}
-
-/* Profile */
-function loadProfile(){
-profileImg.src=currentProfile.img;
-profileName.innerText=currentProfile.name+", "+currentProfile.age;
-}
-
-/* Chat */
-function openChat(){
-chatWith.innerText=currentProfile.name;
-chatBox.classList.remove('hidden');
-messages.innerHTML="";
-db.ref("chats/"+me.id+"/"+currentProfile.id).on("child_added",s=>{
-let d=document.createElement("div");
-d.innerText=s.val().msg;
-messages.appendChild(d);
+db.ref("messages").limitToLast(50).on("child_added",s=>{
+  const m=s.val();
+  const d=document.createElement("div");
+  d.className="msg"+(m.name===username?" self":"");
+  d.innerHTML=`<div class="name">${m.name}</div>${m.text}<div class="time">${new Date(m.time).toLocaleTimeString()}</div>`;
+  messages.appendChild(d);
+  messages.scrollTop=messages.scrollHeight;
 });
-}
 
-/* Send */
-function sendMsg(){
-db.ref("chats/"+currentProfile.id+"/"+me.id).push({msg:msg.value});
-msg.value="";
-}
-
-/* Notifications */
-function listenMessages(){
-db.ref("chats/"+me.id).on("child_added",s=>{
-unread++;
-notifyCount.innerText=unread;
-notifyCount.classList.remove("hidden");
-let d=document.createElement("div");
-d.innerText="New message";
-notifyBox.appendChild(d);
+/* SETTINGS */
+settingsBtn.onclick=()=>{
+  settingsPanel.style.display=settingsPanel.style.display==="block"?"none":"block";
+};
+document.querySelectorAll(".toggle").forEach(t=>{
+  t.onclick=()=>t.classList.toggle("on");
 });
-}
 
-function toggleNotify(){
-notifyBox.classList.toggle("hidden");
-unread=0;
-notifyCount.classList.add("hidden");
-}
-
-/* Block */
-function toggleBlock(){
-db.ref("blocks/"+me.id+"/"+currentProfile.id).set(true);
-alert("User Blocked");
-}
+/* PRIVATE PANEL */
+privateBtn.onclick=()=>{
+  panel.classList.toggle("open");
+};
 </script>
 
 </body>
