--- a/test/index.html
+++ b/test/index.html
@@ -2,324 +2,162 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>WhatsApp Style Chat – Group & Private</title>
+<title>WebRTC Audio / Video Call – Single HTML</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-:root{
-  --bg:#111b21;
-  --panel:#202c33;
-  --accent:#25d366;
-  --muted:#97a4ab;
-}
-*{box-sizing:border-box}
-body{
-  margin:0;
-  background:var(--bg);
-  color:#e9edef;
-  font-family:Arial,system-ui;
-  height:100vh;
-}
-#app{height:100vh;display:flex;flex-direction:column}
-
-/* TOP BAR */
-#topBar{
-  background:#0b141a;
-  padding:8px 12px;
-  display:flex;
-  align-items:center;
-  gap:10px;
-}
-#title{font-weight:700}
-#notifWrap{display:flex;align-items:center;gap:8px}
-.bell{
-  width:38px;height:38px;
-  border-radius:10px;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  cursor:pointer;
-  position:relative;
-  background:#202c33;
-}
-.badge{
-  position:absolute;
-  top:-6px;right:-6px;
-  background:#ff3b30;
-  color:#fff;
-  font-size:12px;
-  min-width:18px;
-  height:18px;
-  padding:0 6px;
-  border-radius:12px;
-  display:flex;
-  align-items:center;
-  justify-content:center;
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: #0f172a;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-/* SETTINGS */
-#settingsWrap{position:relative}
-#settingsPanel{
-  position:absolute;
-  right:0;
-  top:42px;
-  background:#0b141a;
-  border-radius:10px;
-  padding:10px;
-  width:220px;
-  display:none;
-  z-index:50;
-}
-.settingRow{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:6px 0;
-  font-size:14px;
-}
-.toggle{
-  width:44px;height:24px;
-  background:#2a3942;
-  border-radius:12px;
-  position:relative;
-  cursor:pointer;
-}
-.toggle span{
-  width:18px;height:18px;
-  background:#fff;
-  border-radius:50%;
-  position:absolute;
-  top:3px;left:3px;
-  transition:.2s;
-}
-.toggle.on{background:var(--accent)}
-.toggle.on span{left:23px}
-
-/* CHAT */
-#messages{
-  flex:1;
-  overflow:auto;
-  padding:12px;
-  background:#071215;
-}
-.msg{
-  max-width:75%;
-  margin-bottom:8px;
-  padding:8px 12px;
-  border-radius:10px;
-  background:var(--panel);
-}
-.self{margin-left:auto;background:#005c4b}
-.name{font-size:12px;color:#53bdeb}
-.time{font-size:11px;color:var(--muted);text-align:right}
-
-/* INPUT */
-#inputBar{
-  display:flex;
-  gap:8px;
-  padding:10px;
-  background:var(--panel);
-}
-#messageInput{
-  flex:1;
-  border:0;
-  outline:0;
-  padding:10px;
-  border-radius:20px;
-  background:#2a3942;
-  color:#fff;
-}
-#sendBtn{
-  width:44px;height:44px;
-  border-radius:50%;
-  border:0;
-  background:var(--accent);
-  color:#000;
-  font-size:18px;
-  cursor:pointer;
+h2 {
+  margin: 10px;
 }
 
-/* PRIVATE PANEL */
-#panel{
-  position:fixed;
-  right:-320px;
-  top:0;
-  width:320px;
-  height:100vh;
-  background:#081214;
-  transition:.3s;
-  z-index:100;
-  display:flex;
-  flex-direction:column;
+#videos {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
 }
-#panel.open{right:0}
-.panelHeader{
-  padding:12px;
-  border-bottom:1px solid #1f2c33;
-  font-weight:700;
-}
-.panelList{flex:1;overflow:auto}
-.panelItem{
-  padding:10px;
-  cursor:pointer;
-  display:flex;
-  justify-content:space-between;
-}
-.panelItem:hover{background:#202c33}
 
-/* LOGIN */
-#loginWrap{
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.7);
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  z-index:200;
+video {
+  width: 160px;
+  height: 220px;
+  background: #000;
+  border-radius: 10px;
+  object-fit: cover;
 }
-#loginCard{
-  background:#0b141a;
-  padding:20px;
-  border-radius:12px;
-  width:280px;
+
+#controls {
+  margin-top: 15px;
+  display: flex;
+  gap: 10px;
 }
-#loginCard input{
-  width:100%;
-  padding:10px;
-  border-radius:10px;
-  border:0;
-  margin-top:8px;
-  background:#162027;
-  color:#fff;
+
+button {
+  padding: 10px 14px;
+  border-radius: 8px;
+  border: none;
+  font-size: 14px;
+  cursor: pointer;
 }
-#loginCard button{
-  margin-top:10px;
-  width:100%;
-  padding:10px;
-  border:0;
-  border-radius:10px;
-  background:var(--accent);
-  cursor:pointer;
+
+.start { background: #22c55e; }
+.call  { background: #3b82f6; }
+.end   { background: #ef4444; }
+
+textarea {
+  width: 95%;
+  height: 90px;
+  margin-top: 10px;
+  border-radius: 8px;
+  padding: 8px;
+  border: none;
+  resize: none;
 }
 </style>
 </head>
 
 <body>
 
-<!-- PRIVATE CHAT LIST PANEL -->
-<div id="panel">
-  <div class="panelHeader">Private Chats</div>
-  <div class="panelList" id="panelList"></div>
+<h2>🎥 WebRTC Audio / Video Call</h2>
+
+<div id="videos">
+  <video id="localVideo" autoplay muted playsinline></video>
+  <video id="remoteVideo" autoplay playsinline></video>
 </div>
 
-<div id="app">
-
-  <!-- TOP BAR -->
-  <div id="topBar">
-    <div id="title">Group Chat</div>
-    <div style="flex:1"></div>
-
-    <div id="notifWrap">
-      <!-- PRIVATE CHAT ICON -->
-      <div class="bell" id="privateBtn">💬
-        <div class="badge" id="privateBadge" style="display:none">0</div>
-      </div>
-
-      <!-- SETTINGS -->
-      <div id="settingsWrap">
-        <div class="bell" id="settingsBtn">⚙️</div>
-        <div id="settingsPanel">
-          <div class="settingRow">
-            Audio Call
-            <div class="toggle on" id="audioToggle"><span></span></div>
-          </div>
-          <div class="settingRow">
-            Private Chat
-            <div class="toggle on" id="privateToggle"><span></span></div>
-          </div>
-          <div class="settingRow">
-            Profile Image
-            <input type="file" id="profileImg" accept="image/*">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- CHAT -->
-  <div id="messages"></div>
-
-  <div id="inputBar">
-    <input id="messageInput" placeholder="Type message">
-    <button id="sendBtn">➤</button>
-  </div>
+<div id="controls">
+  <button class="start" onclick="startMedia()">🎤 Start Camera</button>
+  <button class="call" onclick="createOffer()">📞 Call</button>
+  <button class="call" onclick="createAnswer()">📲 Answer</button>
+  <button class="end" onclick="endCall()">❌ End</button>
 </div>
 
-<!-- LOGIN -->
-<div id="loginWrap">
-  <div id="loginCard">
-    <b>Enter your name</b>
-    <input id="nameInput" placeholder="Your name">
-    <button id="joinBtn">Join</button>
-  </div>
-</div>
+<p>📋 Copy / Paste signaling data (for demo)</p>
 
-<!-- FIREBASE -->
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+<textarea id="offerBox" placeholder="Offer / Answer"></textarea>
 
 <script>
-/* FIREBASE CONFIG */
-firebase.initializeApp({
-  apiKey: "AIzaSyB1VbLbqBxCiG_bfGoQgQyapXwHUQ-Q7BU",
-  authDomain: "tamil-chat-2d54e.firebaseapp.com",
-  databaseURL: "https://tamil-chat-2d54e-default-rtdb.firebaseio.com",
-  projectId: "tamil-chat-2d54e",
-  storageBucket: "tamil-chat-2d54e.appspot.com",
-  messagingSenderId: "804705969240",
-  appId: "1:804705969240:web:658df281dd8360843"
-});
-const db = firebase.database();
+let localStream;
+let pc;
 
-/* BASIC CHAT */
-let username="";
-const messages=document.getElementById("messages");
+const localVideo = document.getElementById("localVideo");
+const remoteVideo = document.getElementById("remoteVideo");
+const offerBox = document.getElementById("offerBox");
 
-document.getElementById("joinBtn").onclick=()=>{
-  username=document.getElementById("nameInput").value.trim();
-  if(!username)return;
-  document.getElementById("loginWrap").style.display="none";
+const servers = {
+  iceServers: [
+    { urls: "stun:stun.l.google.com:19302" }
+  ]
 };
 
-document.getElementById("sendBtn").onclick=send;
-function send(){
-  const text=messageInput.value.trim();
-  if(!text)return;
-  db.ref("messages").push({name:username,text,time:Date.now()});
-  messageInput.value="";
+async function startMedia() {
+  localStream = await navigator.mediaDevices.getUserMedia({
+    video: true,
+    audio: true
+  });
+  localVideo.srcObject = localStream;
+  alert("Camera & Mic started");
 }
 
-db.ref("messages").limitToLast(50).on("child_added",s=>{
-  const m=s.val();
-  const d=document.createElement("div");
-  d.className="msg"+(m.name===username?" self":"");
-  d.innerHTML=`<div class="name">${m.name}</div>${m.text}<div class="time">${new Date(m.time).toLocaleTimeString()}</div>`;
-  messages.appendChild(d);
-  messages.scrollTop=messages.scrollHeight;
-});
+function createPeer() {
+  pc = new RTCPeerConnection(servers);
 
-/* SETTINGS */
-settingsBtn.onclick=()=>{
-  settingsPanel.style.display=settingsPanel.style.display==="block"?"none":"block";
-};
-document.querySelectorAll(".toggle").forEach(t=>{
-  t.onclick=()=>t.classList.toggle("on");
-});
+  localStream.getTracks().forEach(track => {
+    pc.addTrack(track, localStream);
+  });
 
-/* PRIVATE PANEL */
-privateBtn.onclick=()=>{
-  panel.classList.toggle("open");
-};
+  pc.ontrack = e => {
+    remoteVideo.srcObject = e.streams[0];
+  };
+
+  pc.onicecandidate = e => {
+    if (e.candidate) {
+      offerBox.value = JSON.stringify(pc.localDescription);
+    }
+  };
+}
+
+async function createOffer() {
+  createPeer();
+  const offer = await pc.createOffer();
+  await pc.setLocalDescription(offer);
+  offerBox.value = JSON.stringify(offer);
+}
+
+async function createAnswer() {
+  createPeer();
+  const offer = JSON.parse(offerBox.value);
+  await pc.setRemoteDescription(offer);
+  const answer = await pc.createAnswer();
+  await pc.setLocalDescription(answer);
+  offerBox.value = JSON.stringify(answer);
+}
+
+async function setRemote() {
+  const answer = JSON.parse(offerBox.value);
+  await pc.setRemoteDescription(answer);
+}
+
+function endCall() {
+  pc?.close();
+  pc = null;
+  remoteVideo.srcObject = null;
+  alert("Call Ended");
+}
+
+offerBox.addEventListener("input", () => {
+  if (pc && pc.signalingState === "have-local-offer") {
+    setRemote();
+  }
+});
 </script>
 
 </body>
