--- a/test/index.html
+++ b/test/index.html
@@ -1,133 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ta">
 <head>
-<meta charset="UTF-8">
-<title>Tamil VM Live Dating</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<style>
-body{
-  margin:0;
-  background:#0b0b0b;
-  color:#fff;
-  font-family:Arial,Helvetica,sans-serif;
-  text-align:center;
-}
-h2{color:#ff4d6d;margin:15px 0}
-button{
-  background:#ff4d6d;
-  color:#fff;
-  border:none;
-  padding:12px 24px;
-  font-size:16px;
-  border-radius:10px;
-  cursor:pointer;
-}
-video{
-  width:100%;
-  max-width:420px;
-  border-radius:14px;
-  background:#000;
-}
-.wrap{
-  display:flex;
-  flex-wrap:wrap;
-  justify-content:center;
-  gap:10px;
-  padding:10px;
-}
-</style>
+  <meta charset="UTF-8">
+  <title>Tamil Voice to Text</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f2f2f2;
+      text-align: center;
+      padding: 40px;
+    }
+    textarea {
+      width: 90%;
+      height: 150px;
+      font-size: 18px;
+      padding: 10px;
+    }
+    button {
+      padding: 12px 25px;
+      font-size: 18px;
+      margin-top: 15px;
+      cursor: pointer;
+    }
+  </style>
 </head>
-
 <body>
 
-<h2>❤️ Tamil VM Live</h2>
-<button onclick="start()">Start Random Video</button>
+  <h2>🎙️ Tamil Voice to Text</h2>
 
-<div class="wrap">
-  <video id="local" autoplay muted playsinline></video>
-  <video id="remote" autoplay playsinline></video>
-</div>
+  <textarea id="output" placeholder="இங்கே தமிழ் எழுத்து வரும்..."></textarea><br>
 
-<!-- Firebase -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+  <button onclick="startListening()">🎤 Speak</button>
+  <button onclick="stopListening()">⏹ Stop</button>
 
-<script>
-const firebaseConfig = {
-  apiKey: "AIzaSyB1VbLbqBxCiG_bfGoQgQyapXwHUQ-Q7BU",
-  authDomain: "tamil-chat-2d54e.firebaseapp.com",
-  databaseURL: "https://tamil-chat-2d54e-default-rtdb.firebaseio.com",
-  projectId: "tamil-chat-2d54e",
-  storageBucket: "tamil-chat-2d54e.appspot.com",
-  messagingSenderId: "804705969240",
-  appId: "1:804705969240:web:658df281dd8360843c162d"
-};
+  <script>
+    let recognition;
 
-firebase.initializeApp(firebaseConfig);
-const db = firebase.database();
-
-let pc, stream, roomId;
-const servers = {
-  iceServers:[
-    {urls:"stun:stun.l.google.com:19302"},
-    {urls:"stun:stun1.l.google.com:19302"}
-  ]
-};
-
-async function start(){
-  roomId = "room_" + Math.floor(Math.random()*100000);
-  const waiting = await db.ref("waiting").get();
-
-  if(waiting.exists()){
-    roomId = waiting.val();
-    db.ref("waiting").remove();
-  }else{
-    db.ref("waiting").set(roomId);
-  }
-  join(roomId);
-}
-
-async function join(id){
-  pc = new RTCPeerConnection(servers);
-
-  stream = await navigator.mediaDevices.getUserMedia({video:true,audio:true});
-  document.getElementById("local").srcObject = stream;
-  stream.getTracks().forEach(t=>pc.addTrack(t,stream));
-
-  pc.ontrack = e => document.getElementById("remote").srcObject = e.streams[0];
-
-  pc.onicecandidate = e=>{
-    if(e.candidate){
-      db.ref("rooms/"+id+"/ice").push(JSON.stringify(e.candidate));
-    }
-  };
-
-  const ref = db.ref("rooms/"+id);
-  const snap = await ref.get();
-
-  if(!snap.exists()){
-    const offer = await pc.createOffer();
-    await pc.setLocalDescription(offer);
-    ref.set({offer:JSON.stringify(offer)});
-
-    ref.child("answer").on("value",s=>{
-      if(s.exists()){
-        pc.setRemoteDescription(JSON.parse(s.val()));
+    function startListening() {
+      if (!('webkitSpeechRecognition' in window)) {
+        alert("Speech Recognition not supported in this browser");
+        return;
       }
-    });
-  }else{
-    await pc.setRemoteDescription(JSON.parse(snap.val().offer));
-    const answer = await pc.createAnswer();
-    await pc.setLocalDescription(answer);
-    ref.update({answer:JSON.stringify(answer)});
-  }
 
-  ref.child("ice").on("child_added",s=>{
-    pc.addIceCandidate(new RTCIceCandidate(JSON.parse(s.val())));
-  });
-}
-</script>
+      recognition = new webkitSpeechRecognition();
+      recognition.lang = "ta-IN"; // Tamil language
+      recognition.continuous = true;
+      recognition.interimResults = true;
+
+      recognition.onresult = function(event) {
+        let text = "";
+        for (let i = event.resultIndex; i < event.results.length; i++) {
+          text += event.results[i][0].transcript;
+        }
+        document.getElementById("output").value = text;
+      };
+
+      recognition.start();
+    }
+
+    function stopListening() {
+      if (recognition) {
+        recognition.stop();
+      }
+    }
+  </script>
 
 </body>
 </html>
